Attempt to resize containers to solve overflow.

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -1,11 +1,11 @@
 .App {
   height: 100vh;
   width: 100vw;
+  overflow: hidden;
 }
 
 .AppContainer {
-  height: 100%;
+  height: 96%;
   width: 100%;
   display: flex;
-  
 }
