--- a/src/Components/MenuBar/MenuBar.css
+++ b/src/Components/MenuBar/MenuBar.css
@@ -1,5 +1,5 @@
 .MenuBar {
-  height: 4rem;
+  height: 4%;
   width: 100%;
   border-bottom: rgb(30, 35, 30);
   font-family: "Roboto Slab", serif;
